# fitnesstracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  plotly-cloud.toml  pyproject.toml  requirements.txt  warmup_caches.py
assets/: calendar.css  calendar.js  mobile_tabs.js
backend/: FitFileProcessor.py  SportSummarizer.py  __init__.py  auth.py  cycling.py  cycling_processor.py  expected_columns.json  hiking_processor.py  running_processor.py  skiing_processor.py  sleep_processor.py  storage.py  weighttraining_entry.py
dashboard/: auth_layout.py  callbacks.py  config.py  layout.py  tab_ui.py
mergedfiles/: activity_mesgs.parquet  cp_covariate_bootstrap.json  file_id_mesgs.parquet  power_curves.parquet  session_mesgs.parquet  set_mesgs.parquet  sleep.parquet  split_mesgs.parquet  split_summary_mesgs.parquet
sleepdata/: 1520967_bioMetrics_latest.json  1520967_fitnessAgeData.json  1520967_heartRateZones.json  1520967_powerZones.json  1520967_userBioMetricProfileData.json  1520967_userBioMetrics.json  2021-01-04_2021-04-14_1520967_sleepData.json  2021-01-08_2021-04-18_1520967_sleepData.json  2021-04-14_2021-07-23_1520967_sleepData.json  2021-04-18_2021-07-27_1520967_sleepData.json  2021-07-23_2021-10-31_1520967_sleepData.json  2021-07-27_2021-11-04_1520967_sleepData.json  2021-10-31_2022-02-08_1520967_sleepData.json  2021-11-04_2022-02-12_1520967_sleepData.json  2022-02-08_2022-05-19_1520967_sleepData.json  2022-02-12_2022-05-23_1520967_sleepData.json  2022-05-19_2022-08-27_1520967_sleepData.json  2022-05-23_2022-08-31_1520967_sleepData.json  (+23 more)
(+25 files in other folders)
